--- a/assets/style.scss
+++ b/assets/style.scss
@@ -31,6 +31,7 @@ blockquote {
   font-weight: 300;
   margin: initial;
 }
+
 // Home
 #more-events {
   margin-top: -1.5rem;
@@ -197,4 +198,12 @@ blockquote {
 }
 #profile-link {
   border-top: 1px solid rgba(0,0,0,.125);
+}
+// About
+h2{
+  text-align: center;
+  margin-bottom: 1.25rem;
+}
+.embed-responsive-7by5::before {
+  padding-top: 140%;
 }
