removed faculty senate committee

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       <br>
       All rights reserved.
     </p>
-    <p>This site is an initiative of the FIT Library and the Faculty Senate Library Committee.</p>
+    <p>This site is an initiative of the FIT Library.</p>
     <ul class="list-inline mb-0">
       <li class="list-inline-item"><a class="text-muted" href="https://www.fitnyc.edu/library/" aria-label="FIT Library Homepage"><i class="fas fa-home" aria-hidden="" title="FIT Library Homepage"></i></a></li>
       <li class="list-inline-item"><a class="text-muted" href="https://www.facebook.com/FITLibrary" aria-label="FIT Library Facebook"><i class="fab fa-facebook" aria-hidden="" title="FIT Library Facebook"></i></a></li>
