added kong profile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -200,7 +200,7 @@ blockquote {
   border-top: 1px solid rgba(0,0,0,.125);
 }
 // About
-h2{
+#submissions{
   text-align: center;
   margin-bottom: 1.25rem;
 }
