update link to more fit authors in primo

--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -75,7 +75,7 @@
 </div>
 <div class="row justify-content-center align-items-center pt-5" id="catalog-link">
   <div class="col-auto order-md-last">
-    <a class="text-muted" href="http://fit.sunyconnect.suny.edu:4690/F/?func=find-e&find_scan_code=FIND_WSU&request=FIT+authors&adjacent=N&x=35&y=8" target="_blank" aria-label="FIT Library Catalog">
+    <a class="text-muted" href="https://suny-fit.primo.exlibrisgroup.com/discovery/search?query=lds01,exact,fit%20authors,AND&tab=Everything&search_scope=MyInst_and_CI&sortby=date_d&vid=01SUNY_FIT:01SUNY_FIT&lang=en&mode=advanced&offset=0" target="_blank" aria-label="FIT Library Catalog">
       <i class="fas fa-book fa-3x float-left" title="FIT Library Catalog" aria-hidden=""></i>
     </a>
   </div>
