--- a/_includes/event-slide.html
+++ b/_includes/event-slide.html
@@ -1,4 +1,3 @@
-
 <div class="jumbotron bg-white" id="event-slide">
   <div class="row align-items-center">
     <div class="col-md-8">
@@ -10,7 +9,7 @@
         {{event.event_title}}
       </h1>
       <p>
-        {{event.location}}
+        {{event.location}}{% if event.event_details %}*{% endif %}
         {% if event.map %}
         <!-- Map Button -->
         <a class="text-muted" id="map-button" aria-label="Map" data-toggle="modal" data-target="#mapModal-{{event.date | date: "%Y%m%d"}}">
