--- a/_layouts/event.html
+++ b/_layouts/event.html
@@ -1,63 +1,68 @@
 ---
 layout: default
 ---
-  <div class="row align-items-center justify-content-center">
-    <div class="col-md-8">
-      <h1 class="mb-4 text-center">
-        {{page.event_title}}
-      </h1>
-      {% if page.image %}
-      <img class="img-fluid rounded mb-2 mx-auto d-block" src="/assets/images/{{page.image}}" alt="{{page.author}} Event Image" />
-      {% endif %}
-      <p class="font-italic">{{page.description}}</p>
-      <p class="lead text-center my-5">
-        {{page.date | date: "%A, %B %e, %Y" }} | {{page.time}}<br>
-        {{page.location}}
-        {% if page.map %}
-        <!-- Map Button -->
-        <a class="text-muted" id="map-button" aria-label="Map" data-toggle="modal" data-target="#mapModal">
-          <i aria-hidden class="fas fa-map" title="Map"></i>
-        </a>
-        <!-- Map Modal -->
-        <div class="modal fade" id="mapModal" tabindex="-1" role="dialog" aria-labelledby="mapModalTitle" aria-hidden="true">
-          <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="mapModalTitle">{{page.location}}</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-                </button>
-              </div>
-              <div class="modal-body">
-                <div class="embed-responsive embed-responsive-1by1">
-                  {{page.map}}
-                </div>
+<div class="row align-items-center justify-content-center">
+  <div class="col-md-8">
+    <h1 class="mb-4 text-center">
+      {{page.event_title}}
+    </h1>
+    {% if page.image %}
+    <img class="img-fluid rounded mb-2 mx-auto d-block" src="/assets/images/{{page.image}}" alt="{{page.author}} Event Image" />
+    {% endif %}
+    <p class="font-italic">{{page.description}}</p>
+    <p class="lead text-center my-5">
+      {{page.date | date: "%A, %B %e, %Y" }} | {{page.time}}<br>
+      {{page.location}}{% if page.event_details %}*{% endif %}
+      {% if page.map %}
+      <!-- Map Button -->
+      <a class="text-muted" id="map-button" aria-label="Map" data-toggle="modal" data-target="#mapModal">
+        <i aria-hidden class="fas fa-map" title="Map"></i>
+      </a>
+      <!-- Map Modal -->
+      <div class="modal fade" id="mapModal" tabindex="-1" role="dialog" aria-labelledby="mapModalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="mapModalTitle">{{page.location}}</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <div class="embed-responsive embed-responsive-1by1">
+                {{page.map}}
               </div>
             </div>
           </div>
         </div>
-        {% endif %}
-      </p>
-      <p>{{page.content}}</p>
-    </div>
-    {% for author in page.authors %}
-      {% assign profile = site.profiles | where: "name", author | first %}
-      {% if profile %}
-      <div class="col-md-8 mt-5 pt-5" id="profile-link">
-        <div class="row align-items-center">
-          <div class="col-md-2" id="author-image">
-            {% if profile.image %}
-            <img class="img-fluid rounded mb-3 mb-md-0" src="/assets/images/{{profile.image}}" alt="Portrait of {{profile.name}}" />
-            {% endif %}
-          </div>
-          <div class="col-md-auto" id="author-name">
-            <h2>{{profile.name}}</h2>
-            <a class="text-dark" href="{{profile.url}}">
-              View Profile
-            </a>
-          </div>
-        </div>
       </div>
       {% endif %}
-    {% endfor %}
+    </p>
+    <p>{{page.content}}</p>
+    {% if page.event_details %}
+    <p class="small my-4">
+      *{{page.event_details}}
+    </p>
+    {% endif %}
   </div>
+  {% for author in page.authors %}
+  {% assign profile = site.profiles | where: "name", author | first %}
+  {% if profile %}
+  <div class="col-md-8 mt-5 pt-5" id="profile-link">
+    <div class="row align-items-center">
+      <div class="col-md-2" id="author-image">
+        {% if profile.image %}
+        <img class="img-fluid rounded mb-3 mb-md-0" src="/assets/images/{{profile.image}}" alt="Portrait of {{profile.name}}" />
+        {% endif %}
+      </div>
+      <div class="col-md-auto" id="author-name">
+        <h2>{{profile.name}}</h2>
+        <a class="text-dark" href="{{profile.url}}">
+          View Profile
+        </a>
+      </div>
+    </div>
+  </div>
+  {% endif %}
+  {% endfor %}
+</div>
