beard and newgarden update

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -46,6 +46,11 @@ layout: default
             <i aria-hidden class="fab fa-facebook" title="Facebook"></i>
           </a>
           {% endif %}
+          {% if page.linkedin %}
+          <a class="nav-link text-muted" aria-label="LinkedIn" href="{{page.linkedin}}" target="_blank">
+            <i aria-hidden class="fab fa-linkedin" title="LinkedIn"></i>
+          </a>
+          {% endif %}
         </nav>
       </li>
     </ul>
