--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,38 +1,39 @@
 <!DOCTYPE html>
 <html lang="en-us" class="h-100">
-  {% include head.html %}
-  <body class="h-100 d-flex flex-column">
-    <a class="sr-only sr-only-focusable" href="#main">Skip to main content</a>
-    {% include header.html %}
-    <div class="container my-5 flex-shrink-0" id="main">
-      {{ content }}
-    </div>
-    {% include footer.html %}
+{% include head.html %}
 
-  </body>
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  {% if page.title == "Home" %}
-    <script type="text/javascript">
-      var current = new Date();
-      var upcoming = false;
-      $(".event-block").each(function(index) {
-        var eventdate = '';
-        eventdate = new Date($(this).data('date'));
-        // Add 1 to date to make sure it still displays the day of event
-        eventdate.setDate(eventdate.getDate() + 1);
-        if (current > eventdate) {
-          $(this).detach();
-        }
-        else {
-          upcoming = true;
-        }
-      });
-      if (upcoming == false) {
-        $("#upcoming").detach();
-      }
-    </script>
-  {% endif %}
+<body class="h-100 d-flex flex-column">
+  <a class="sr-only sr-only-focusable" href="#main">Skip to main content</a>
+  {% include header.html %}
+  <div class="container my-5 flex-shrink-0" id="main">
+    {{ content }}
+  </div>
+  {% include footer.html %}
+
+</body>
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+{% if page.title == "Home" %}
+<script type="text/javascript">
+  var current = new Date();
+  var upcoming = false;
+  $(".event-block").each(function(index) {
+    var eventdate = '';
+    eventdate = new Date($(this).data('date'));
+    // Add 1 to date to make sure it still displays the day of event
+    eventdate.setDate(eventdate.getDate() + 1);
+    if (current > eventdate) {
+      $(this).detach();
+    } else {
+      upcoming = true;
+    }
+  });
+  if (upcoming == false) {
+    $("#upcoming").detach();
+  }
+</script>
+{% endif %}
+
 </html>
