--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,19 +10,19 @@
     </p>
     <p>This site is an initiative of the FIT Library.</p>
     <ul class="list-inline mb-0">
-      <li class="list-inline-item"><a class="text-muted" href="https://www.fitnyc.edu/library/"
+      <li class="list-inline-item"><a class="link-secondary" href="https://www.fitnyc.edu/library/"
           aria-label="FIT Library Homepage"><i class="fas fa-home" aria-hidden="" title="FIT Library Homepage"></i></a>
       </li>
-      <li class="list-inline-item"><a class="text-muted" href="https://www.facebook.com/FITLibrary"
+      <li class="list-inline-item"><a class="link-secondary" href="https://www.facebook.com/FITLibrary"
           aria-label="FIT Library Facebook"><i class="fab fa-facebook" aria-hidden=""
             title="FIT Library Facebook"></i></a></li>
-      <li class="list-inline-item"><a class="text-muted" href="https://twitter.com/FITLibrary"
+      <li class="list-inline-item"><a class="link-secondary" href="https://twitter.com/FITLibrary"
           aria-label="FIT Library Twitter"><i class="fab fa-twitter" aria-hidden="" title="FIT Library Twitter"></i></a>
       </li>
-      <li class="list-inline-item"><a class="text-muted" href="http://pinterest.com/fitlibrary/"
-          aria-label="FIT Library Pinterest"><i class="fab fa-pinterest-p" aria-hidden=""
-            title="FIT Library Pinterest"></i></a></li>
-      <li class="list-inline-item"><a class="text-muted" href="https://www.instagram.com/fitnyclibrary/"
+      <li class="list-inline-item"><a class="link-secondary" href="https://www.tiktok.com/@fitnyclibrary"
+          aria-label="FIT Library TikTok"><i class="fab fa-tiktok" aria-hidden="true"
+            title="FIT Library TikTok"></i><span class="sr-only">FIT Library TikTok</span></a></li>
+      <li class="list-inline-item"><a class="link-secondary" href="https://www.instagram.com/fitnyclibrary/"
           aria-label="FIT Library Instagram"><i class="fab fa-instagram" aria-hidden=""
             title="FIT Library Instagram"></i></a></li>
 
